--- a/Printemps/Parallélisme.tex
+++ b/Printemps/Parallélisme.tex
@@ -13,7 +13,8 @@
   \textbf{Parallélisme} \\
   \Large Résumé des cours dispensés par Jens Gustedt à l'Université de
   Strasbourg \\
-  \large Session de Printemps 2018
+  \large Session de Printemps 2018 \\
+  \huge L'USAGE DE CE DOCUMENT NE PEUT ÊTRE QU'ACADÉMIQUE
 }
 \author{Marek Felšöci}
 \date{15 janvier 2018}
