Correction des erreurs

--- a/Printemps/Parallélisme.tex
+++ b/Printemps/Parallélisme.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt, a4paper]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{amsmath,amssymb,amsfonts,graphicx,hyperref,listings,palatino,xcolor}
+\usepackage{amsmath,graphicx,hyperref,listings,palatino,xcolor}
 
 \setlength{\parindent}{3em}
 \setlength{\parskip}{1em}
@@ -23,11 +23,11 @@
   emphstyle=\color{violet}
 }
 
-\title{%
+\title{
   \textbf{Parallélisme} \\
   \Large Résumé des cours dispensés par Jens Gustedt à l'Université de
   Strasbourg \\
-  \large Session de Printemps 2018 \\
+  \large Session de printemps 2018 \\
   \huge L'USAGE DE CE DOCUMENT NE PEUT ÊTRE QU'ACADÉMIQUE
 }
 \author{Marek Felšöci}
@@ -35,7 +35,6 @@
 
 \begin{document}
   \maketitle
-  \newpage
   \section{Introduction}
     Une \textbf{machine parallèle} est une collection d'éléments de calcul
     capables de communiquer et de coopérer dans le but de \textbf{résoudre
