Correction des informations sur les auteurs et les crédits

--- a/Automne/Sécurité des systèmes et réseaux.tex
+++ b/Automne/Sécurité des systèmes et réseaux.tex
@@ -20,6 +20,10 @@
 
 \begin{document}
 	\maketitle
+	\section*{Crédits}
+  Ce résumé s'appuie sur les notes et les supports du cours de Sécurité des
+	systèmes et réseaux dispensé par Jean-Marc MULLER et Sébastien SCHMITT à
+	l'Université de	Strasbourg.
 	\section{Généralités}
 	\subsection{Introduction}
 	\subsubsection{Origines}
