--- a/Printemps/Parallélisme.tex
+++ b/Printemps/Parallélisme.tex
@@ -35,6 +35,9 @@
 
 \begin{document}
   \maketitle
+  \section*{Crédits}
+    Ce résumé s'appuie sur les notes notes du cours de Parallélisme dispensé par
+    Jens GUSTEDT à l'Université de Strasbourg.
   \section{Introduction}
     Une \textbf{machine parallèle} est une collection d'éléments de calcul
     capables de communiquer et de coopérer dans le but de \textbf{résoudre
