Correction des informations sur l'auteur des documents

--- a/Automne/Sécurité des systèmes et réseaux.tex
+++ b/Automne/Sécurité des systèmes et réseaux.tex
@@ -15,7 +15,7 @@
   \large Session d'automne 2017 \\
   \huge L'USAGE DE CE DOCUMENT NE PEUT ÊTRE QU'ACADÉMIQUE
 }
-\author{Marek Felšöci}
+\author{Mise en forme par Marek Felšöci}
 \date{17 octobre 2017}
 
 \begin{document}
