--- a/Printemps/Parallélisme.tex
+++ b/Printemps/Parallélisme.tex
@@ -30,7 +30,7 @@
   \large Session de printemps 2018 \\
   \huge L'USAGE DE CE DOCUMENT NE PEUT ÊTRE QU'ACADÉMIQUE
 }
-\author{Marek Felšöci}
+\author{Mise en forme par Marek Felšöci}
 \date{4 février 2018}
 
 \begin{document}
